# err

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: gcc.yml
include/err/: error.hpp  overloaded.hpp
include/err/detail/: all_types_same.hpp  apply_non_type_template_arg.hpp  error_impl.hpp  first_non_type_template_arg.hpp  forward_like.hpp  is_overlap.hpp  is_subset.hpp  join_arrays.hpp
test/: CMakeLists.txt  test_assignability_from_related_error.cpp  test_common_type.cpp  test_constructibility_from_related_error.cpp  test_default_constructibility.cpp  test_transform.cpp  test_type_identity.cpp  test_use_with_expected.cpp  test_value_constructibility.cpp  test_visit.cpp
